--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,22 @@
+# steps:
+# - name: "gcr.io/cloud-builders/go"
+#   args: ["install", "github.com/googlecloudplatform/golang-docker"]
+# - name: "gcr.io/cloud-builders/docker"
+#   args: ["build", "-t", "gcr.io/$PROJECT_ID/your-app-name", "."]
+# - name: "gcr.io/cloud-builders/docker"
+#   args: ["push", "gcr.io/$PROJECT_ID/your-app-name"]
+# - name: "gcr.io/cloud-builders/gcloud"
+#   args: ["app", "deploy", "app.yaml"]
+
+# Docker Build
 steps:
-- name: "gcr.io/cloud-builders/go"
-  args: ["install", "github.com/googlecloudplatform/golang-docker"]
-- name: "gcr.io/cloud-builders/docker"
-  args: ["build", "-t", "gcr.io/$PROJECT_ID/your-app-name", "."]
-- name: "gcr.io/cloud-builders/docker"
-  args: ["push", "gcr.io/$PROJECT_ID/your-app-name"]
-- name: "gcr.io/cloud-builders/gcloud"
-  args: ["app", "deploy", "app.yaml"]
-
-
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '-t', 'asia-northeast1-docker.pkg.dev/$PROJECT_ID/go-sandbox/todo:$SHORT_SHA', '.']
+# Docker push to Google Artifact Registry
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['push', 'asia-northeast1-docker.pkg.dev/$PROJECT_ID/go-sandbox/todo:$SHORT_SHA']
+# Deploy to Cloud Run
+- name: 'gcr.io/cloud-builders/gcloud'
+  args: ['run', 'deploy', 'helloworld-${SHORT_SHA}',
+         '--image=asia-northeast1-docker.pkg.dev/$PROJECT_ID/go-sandbox/todo:$SHORT_SHA',
+         '--region', 'asia-northeast1', '--platform', 'managed']
