--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,22 +1,23 @@
-# steps:
-# - name: "gcr.io/cloud-builders/go"
-#   args: ["install", "github.com/googlecloudplatform/golang-docker"]
-# - name: "gcr.io/cloud-builders/docker"
-#   args: ["build", "-t", "gcr.io/$PROJECT_ID/your-app-name", "."]
-# - name: "gcr.io/cloud-builders/docker"
-#   args: ["push", "gcr.io/$PROJECT_ID/your-app-name"]
-# - name: "gcr.io/cloud-builders/gcloud"
-#   args: ["app", "deploy", "app.yaml"]
-
-# Docker Build
 steps:
+# show substitutions
+- name: 'gcr.io/cloud-builders/gcloud'
+  entrypoint: 'bash'
+  args:
+  - '-c'
+  - |
+    echo "My custom environment variable: $REGION, $DOCKER_IMAGE_REPO_NAME, $DOCKER_IMAGE_NAME"
+# Docker Build
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'asia-northeast1-docker.pkg.dev/$PROJECT_ID/go-sandbox/todo:$SHORT_SHA', '.']
+  args: ['build', '-t', '$REGION-docker.pkg.dev/$PROJECT_ID/$DOCKER_IMAGE_REPO_NAME/$DOCKER_IMAGE_NAME', '.']
 # Docker push to Google Artifact Registry
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'asia-northeast1-docker.pkg.dev/$PROJECT_ID/go-sandbox/todo:$SHORT_SHA']
+  args: ['push', '$REGION-docker.pkg.dev/$PROJECT_ID/$DOCKER_IMAGE_REPO_NAME/$DOCKER_IMAGE_NAME']
 # Deploy to Cloud Run
 - name: 'gcr.io/cloud-builders/gcloud'
   args: ['run', 'deploy', 'helloworld-${SHORT_SHA}',
-         '--image=asia-northeast1-docker.pkg.dev/$PROJECT_ID/go-sandbox/todo:$SHORT_SHA',
-         '--region', 'asia-northeast1', '--platform', 'managed']
+         '--image=$REGION-docker.pkg.dev/$PROJECT_ID/$DOCKER_IMAGE_REPO_NAME/$DOCKER_IMAGE_NAME',
+         '--region', '$REGION', '--platform', 'managed']
+substitutions:
+  _REGION: 'asia-northeast1'
+  _DOCKER_IMAGE_REPO_NAME: 'go-sandbox'
+  _DOCKER_IMAGE_NAME: 'todo:$SHORT_SHA'
