--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,23 +1,38 @@
 steps:
-# show substitutions
-- name: 'gcr.io/cloud-builders/gcloud'
-  entrypoint: 'bash'
-  args:
-  - '-c'
-  - |
-    echo "My custom environment variable: $_REGION, $_DOCKER_IMAGE_REPO_NAME, $_DOCKER_IMAGE_NAME"
 # Docker Build
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', '$_REGION-docker.pkg.dev/$PROJECT_ID/$_DOCKER_IMAGE_REPO_NAME/$_DOCKER_IMAGE_NAME', '.']
 # Docker push to Google Artifact Registry
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', '$_REGION-docker.pkg.dev/$PROJECT_ID/$_DOCKER_IMAGE_REPO_NAME/$_DOCKER_IMAGE_NAME']
-# Deploy to Cloud Run
+# Create secret.yaml
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['run', 'deploy', 'helloworld-${SHORT_SHA}',
-         '--image=$_REGION-docker.pkg.dev/$PROJECT_ID/$_DOCKER_IMAGE_REPO_NAME/$_DOCKER_IMAGE_NAME',
-         '--region', '$_REGION', '--platform', 'managed']
+  entrypoint: 'bash'
+  args:
+    - "-c"
+    - |
+      cat << EOF >> app-secret.yaml
+      BUCKET: $BUCKET
+      EOF
+  secretEnv: ['BUCKET']
+# Deploy to Cloud Run
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  entrypoint: gcloud
+  args:
+    - 'run'
+    - 'deploy'
+    - 'helloworld-${SHORT_SHA}'
+    - '--image'
+    - '$_REGION-docker.pkg.dev/$PROJECT_ID/$_DOCKER_IMAGE_REPO_NAME/$_DOCKER_IMAGE_NAME'
+    - '--region'
+    - '$_REGION'
+    - '--env-vars-file'
+    - './app-secret.yaml'
 substitutions:
   _REGION: 'asia-northeast1'
   _DOCKER_IMAGE_REPO_NAME: 'go-sandbox'
   _DOCKER_IMAGE_NAME: 'todo:${SHORT_SHA}'
+availableSecrets:
+  secretManager:
+  - versionName: projects/$PROJECT_NUMBER/secrets/BUCKET/versions/latest
+    env: 'BUCKET'
