--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,8 +13,13 @@ steps:
     - |
       cat << EOF >> app-secret.yaml
       BUCKET: $$BUCKET
+      POSTGRES_HOST: $$POSTGRES_HOST
+      POSTGRES_USER: $$POSTGRES_USER
+      POSTGRES_DB: $$POSTGRES_DB
+      POSTGRES_PASSWORD: $$POSTGRES_PASSWORD
+      POSTGRES_PORT: $$POSTGRES_PORT
       EOF
-  secretEnv: ['BUCKET']
+  secretEnv: ['BUCKET', 'POSTGRES_HOST', 'POSTGRES_USER', 'POSTGRES_DB', 'POSTGRES_PASSWORD', 'POSTGRES_PORT']
 # Deploy to Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
@@ -36,3 +41,13 @@ availableSecrets:
   secretManager:
   - versionName: projects/$PROJECT_NUMBER/secrets/BUCKET/versions/latest
     env: 'BUCKET'
+  - versionName: projects/$PROJECT_NUMBER/secrets/POSTGRES_HOST/versions/latest
+    env: 'POSTGRES_HOST'
+  - versionName: projects/$PROJECT_NUMBER/secrets/POSTGRES_USER/versions/latest
+    env: 'POSTGRES_USER'
+  - versionName: projects/$PROJECT_NUMBER/secrets/POSTGRES_DB/versions/latest
+    env: 'POSTGRES_DB'
+  - versionName: projects/$PROJECT_NUMBER/secrets/POSTGRES_PASSWORD/versions/latest
+    env: 'POSTGRES_PASSWORD'
+  - versionName: projects/$PROJECT_NUMBER/secrets/POSTGRES_PORT/versions/latest
+    env: 'POSTGRES_PORT'
