--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,7 +17,7 @@ steps:
       POSTGRES_USER: $$POSTGRES_USER
       POSTGRES_DB: $$POSTGRES_DB
       POSTGRES_PASSWORD: $$POSTGRES_PASSWORD
-      POSTGRES_PORT: $$POSTGRES_PORT
+      POSTGRES_PORT: '$$POSTGRES_PORT'
       EOF
   secretEnv: ['BUCKET', 'POSTGRES_HOST', 'POSTGRES_USER', 'POSTGRES_DB', 'POSTGRES_PASSWORD', 'POSTGRES_PORT']
 # Deploy to Cloud Run
