--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,7 +13,7 @@ steps:
     - |
       cat << EOF >> app-secret.yaml
       BUCKET: $$BUCKET
-      POSTGRES_HOST: $$POSTGRES_HOST
+      POSTGRES_HOST: '$$POSTGRES_HOST'
       POSTGRES_USER: $$POSTGRES_USER
       POSTGRES_DB: $$POSTGRES_DB
       POSTGRES_PASSWORD: $$POSTGRES_PASSWORD
@@ -26,7 +26,7 @@ steps:
   args:
     - 'run'
     - 'deploy'
-    - 'helloworld-${SHORT_SHA}'
+    - 'helloworld'
     - '--image'
     - '$_REGION-docker.pkg.dev/$PROJECT_ID/$_DOCKER_IMAGE_REPO_NAME/$_DOCKER_IMAGE_NAME'
     - '--region'
