localとcloudのsql接続を場合分け

--- a/db/.env
+++ b/db/.env
@@ -1,6 +1,8 @@
-GIN_MODE=release
+GIN_MODE=debug
 POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
 POSTGRES_DB=local
 POSTGRES_PASSWORD=postgrespw
-POSTGRES_PORT=15432
+POSTGRES_PORT=25432
+INSTANCE_CONNECTION_NAME=hoge
+PRIVATE_IP=hoge
