--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,8 +18,10 @@ steps:
       POSTGRES_DB: $$POSTGRES_DB
       POSTGRES_PASSWORD: $$POSTGRES_PASSWORD
       POSTGRES_PORT: '$$POSTGRES_PORT'
+      INSTANCE_CONNECTION_NAME: '$$INSTANCE_CONNECTION_NAME'
+      PRIVATE_IP: '$$PRIVATE_IP'
       EOF
-  secretEnv: ['BUCKET', 'POSTGRES_HOST', 'POSTGRES_USER', 'POSTGRES_DB', 'POSTGRES_PASSWORD', 'POSTGRES_PORT']
+  secretEnv: ['BUCKET', 'POSTGRES_HOST', 'POSTGRES_USER', 'POSTGRES_DB', 'POSTGRES_PASSWORD', 'POSTGRES_PORT', 'INSTANCE_CONNECTION_NAME', 'PRIVATE_IP']
 # Deploy to Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
@@ -51,3 +53,7 @@ availableSecrets:
     env: 'POSTGRES_PASSWORD'
   - versionName: projects/$PROJECT_NUMBER/secrets/POSTGRES_PORT/versions/latest
     env: 'POSTGRES_PORT'
+  - versionName: projects/$PROJECT_NUMBER/secrets/INSTANCE_CONNECTION_NAME/versions/latest
+    env: 'INSTANCE_CONNECTION_NAME'
+  - versionName: projects/$PROJECT_NUMBER/secrets/PRIVATE_IP/versions/latest
+    env: 'PRIVATE_IP'
