不要な変数を削除

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,11 +18,9 @@ steps:
       POSTGRES_DB: $$POSTGRES_DB
       POSTGRES_PASSWORD: $$POSTGRES_PASSWORD
       POSTGRES_PORT: '$$POSTGRES_PORT'
-      INSTANCE_CONNECTION_NAME: '$$INSTANCE_CONNECTION_NAME'
-      PRIVATE_IP: '$$PRIVATE_IP'
       GIN_MODE: '$$GIN_MODE'
       EOF
-  secretEnv: ['BUCKET', 'POSTGRES_HOST', 'POSTGRES_USER', 'POSTGRES_DB', 'POSTGRES_PASSWORD', 'POSTGRES_PORT', 'INSTANCE_CONNECTION_NAME', 'PRIVATE_IP', 'GIN_MODE']
+  secretEnv: ['BUCKET', 'POSTGRES_HOST', 'POSTGRES_USER', 'POSTGRES_DB', 'POSTGRES_PASSWORD', 'POSTGRES_PORT', 'GIN_MODE']
 # Deploy to Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
@@ -54,9 +52,5 @@ availableSecrets:
     env: 'POSTGRES_PASSWORD'
   - versionName: projects/$PROJECT_NUMBER/secrets/POSTGRES_PORT/versions/latest
     env: 'POSTGRES_PORT'
-  - versionName: projects/$PROJECT_NUMBER/secrets/INSTANCE_CONNECTION_NAME/versions/latest
-    env: 'INSTANCE_CONNECTION_NAME'
-  - versionName: projects/$PROJECT_NUMBER/secrets/PRIVATE_IP/versions/latest
-    env: 'PRIVATE_IP'
   - versionName: projects/$PROJECT_NUMBER/secrets/GIN_MODE/versions/latest
     env: 'GIN_MODE'
